--- a/src/Guide.css
+++ b/src/Guide.css
@@ -1,7 +1,7 @@
 .guide-container {
   min-height: 100vh;
   width: 100%;
-  background-image: url('/Background-redesign.avif');
+  background-image: url('https://res.cloudinary.com/dctuev0mm/image/upload/v1766935583/Background-redesign_jbvbrc.png');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
